# What2WatchNextBot

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 02c4ac8f5d44_create_user_model.py  067eee11c723_add_user_settings_fields.py  20ef90e0583e_create_user.py  38cdcc0adc6b_add_user_last_activity_at_field.py  3ac1e5da88d5_update_foreign_keys_to_provide_on_.py  5525a2ab6a30_update_genre_title_and_selected_genres_.py  72e8938336f5_add_user_watched_titles_and_user_.py  7ff4da84bbd4_create_title_and_genre_models.py  81f22f1bc935_add_selected_title_types_table.py  83376a8a2aa3_make_user_minimum_movie_rating_float.py  8e43cbf70467_add_title_genre_and_titletype_models.py  9ed0bf6dd254_add_user_require_all_selected_genres_.py  b88e2ac374af_add_user_skipped_titles_and_titleskip_.py  ba72a10f52d2_add_user_selected_genres_relationship.py  c2731944931a_add_user_minimum_votes_field.py  d2b81796f759_add_user_minimum_rating_field.py  efaec3a30a78_add_user_last_settings_update_at_field.py
app/: aitertools.py  config.py  database.py  logging.py  redis.py  utils.py
app/bot/: bot.py  constants.py  dispatcher.py  middlewares.py  utils.py
app/bot/routers/: common.py  extra.py  test.py
app/bot/scenes/: __init__.py  _autocleanupscene.py  _mixins.py  genreselectorscene.py  minimummovieratingselectorscene.py  minimummovievotesselectorscene.py  settingsscene.py  suggestionscene.py  titletypeselectorscene.py
app/core/: constants.py  models.py
app/core/services/: genre.py  suggestions.py  title.py  title_type.py  user.py
app/entrypoints/: bot_polling.py  bot_webhook.py  imdb_import.py
app/imdb/: downloads.py  parsers.py
app/testing/: constants.py  fakes.py  mockedbot.py  scenes.py
notebooks/: imdb-dataset-analysis.ipynb  test-import.ipynb
tests/: conftest.py  test_aitertools.py  test_config.py  test_database.py  test_logging.py  test_redis.py
tests/bot/: conftest.py  test_bot.py  test_dispatcher.py  test_middlewares.py
tests/bot/routers/: test_extra.py  test_test.py
tests/bot/scenes/: conftest.py  test__autocleanupscene.py  test_genreselectorscene.py  test_minimummovieratingselectorscene.py  test_minimummovievotesselectorscene.py  test_titletypeselectorscene.py
tests/core/: test_models.py
tests/core/services/: test_genre.py  test_suggestions.py  test_title.py  test_title_type.py  test_user.py
tests/imdb/: test_downloads.py  test_parsers.py
what2watchnextbot/: __main__.py  bot.py  cli.py  commands.py  database.py  dataimport.py  dispatcher.py  genrepreferences.py  logging.py  models.py  settings.py  suggestions.py
what2watchnextbot/routers/: _utils.py  error.py  shutdown.py  startup.py
what2watchnextbot/routers/main/: __init__.py  global_commands.py  unhandled.py
what2watchnextbot/routers/main/scenes/: __init__.py  filtersettingsscene.py  suggestionscene.py  titlefiltersscene.py
what2watchnextbot/scenes/: suggestionscene.py  titlefiltersscene.py
